--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <img src="https://placehold.it/200x150" />
         <img src="https://dummyimage.com/150x80/4ca837/ff0073&text=dummy" /><br>
         
-        <audio src="충동.mp3"> </audio>
+        <h3> 동욱이의 작품 </h3>
+        <audio src="충동.mp3" controls> </audio>
     </body>
 
 </html>
