--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-        <h1> Header 1</h1>
+        <h1> 2407 박영진 </h1>
         <h2> Header 2</h2>
         <h3> Header 3</h3>
         <br>
