--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li> 2020.09.09 배운 내용: 사운드와 동영사을 넣는 방법을 배움 </li>
-            <li> <a href="2407%EB%B0%95%EC%98%81%EC%A7%84(0909).html" target="_blank"></a> </li>
+            <li> <a href="2407(0909).html" target="_blank"></a> </li>
         
         </ul>
     </body>
