--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li> 2020.09.09 배운 내용: 사운드와 동영사을 넣는 방법을 배움 </li>
-            <li> <a href="2407(0909).html" target="_blank">2020.09.09 배운 내용 - 소리 및 동영상 연결</a> </li>
+            <li> <a href="2407박영진(0909).html" target="_blank">2020.09.09 배운 내용 - 소리 및 동영상 연결</a> </li>
         
         </ul>
     </body>
