--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     
     <body>
+        <h1> 웹 프로그래밍 배운 내용 </h1>
+        
         <ul>
             <li> 2020.09.09 배운 내용: 사운드와 동영사을 넣는 방법을 배움 </li>
             <li> <a href="2407박영진(0909).html" target="_blank">2020.09.09 배운 내용 - 소리 및 동영상 연결</a> </li>
