--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li> 2020.09.09 배운 내용: 사운드와 동영사을 넣는 방법을 배움 </li>
             <li> <a href="2407(0909).html" target="_blank">2020.09.09 배운 내용 - 소리 및 동영상 연결</a> </li>
-            <li> <a href="2407(20200914)_1.html" target="_blank">2020.09.09 배운 내용 - 소리 및 동영상 연결</a> </li>
+            <li> <a href="2407(20200914)_1.html" target="_blank">2020.09.14 배운 내용 - 테이블 태그</a> </li>
         
         </ul>
     </body>
