--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <li> <a href="2407(0909).html" target="_blank">2020.09.09 배운 내용 - 소리 및 동영상 연결</a> </li>
             <li> <a href="2407(20200914)_1.html" target="_blank">2020.09.14 배운 내용 - 테이블 태그</a> </li>
             <li> <a href="2407(20200916)_1.html" target="_blank">2020.09.16 배운 내용 - CSS 디자인 (Internal)</a> </li>
+            <li> <a href="2407(20200921)_1.html" target="_blank">2020.09.21 배운 내용 - JavaScript로 무엇을 할 수 있을까? - 1</a> </li>
+            <li> <a href="2407(20200921)_2.html" target="_blank">2020.09.21 배운 내용 - JavaScript로 무엇을 할 수 있을까? - 2</a> </li>
+            <li> <a href="2407(20200921)_3.html" target="_blank">2020.09.21 배운 내용 - JavaScript로 무엇을 할 수 있을까? - 3</a> </li>
+            <li> <a href="2407(20200921)_4.html" target="_blank">2020.09.21 배운 내용 - JavaScript로 무엇을 할 수 있을까? - 4</a> </li>
         
         </ul>
     </body>
