--- a/2407(20200921)_1.html
+++ b/2407(20200921)_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h2>My First JavaScript</h2>
+        <h2>나의 첫 자바스크립트</h2>
         <button type="button"onclick="document.getElementById('demo').innerHTML = Date()">
             Click me to display Date and Time.</button>
         <p id="demo"></p>
