--- a/2407(20200923)_3.html
+++ b/2407(20200923)_3.html
@@ -4,5 +4,8 @@
         <script src="Scripts/first.js"></script>
         <h2>My First JavaScript</h2>
         <p id="demo"></p>
+        <p id="test" style="color: aqua">지금 시각</p>
+        <button type="button" onclick="changeColor()">빨간색</button>
+        
     </body>
 </html>
