--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li> <a href="2407(20200921)_3.html" target="_blank">2020.09.21 배운 내용 - JavaScript로 무엇을 할 수 있을까? - 3</a> </li>
             <li> <a href="2407(20200921)_4.html" target="_blank">2020.09.21 배운 내용 - JavaScript로 무엇을 할 수 있을까? - 4</a> </li>
             <li> <a href="2407(20200923)_3.html" target="_blank">2020.09.23 배운 내용 - JavaScript과 이벤트를 이용하여 현재 시간 띄우기 + DOM 사용 - 4</a> </li>
+            <li> <a href="2407(20200928)_1.html" target="_blank">2020.09.28 배운 내용 - 자료형 놀이</a> </li>
+            <li> <a href="2407(20200928)_2.html" target="_blank">2020.09.28 배운 내용 - for, foreacg 출력 </a> </li>
         
         </ul>
     </body>
