--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <li> <a href="2407(20201005)_2.html" target="_blank">2020.10.05 배운 내용 - Event 학습 2</a> </li>
             <li> <a href="2407(20201005)_3.html" target="_blank">2020.10.05 배운 내용 - setInterval 예시</a> </li>
             <li> <a href="2407(20201005)_4.html" target="_blank">2020.10.05 배운 내용 - 종합 과제</a> </li>
+            
+            <li> <a href="2407(20201008)_1.html" target="_blank">2020.10.08 배운 내용 - 제어문 정리</a> </li>
+            <li> <a href="2407(20201008)_2.html" target="_blank">2020.10.08 배운 내용 - 재귀함수 vs While문</a> </li>
+            <li> <a href="2407(20201008)_3.html" target="_blank">2020.10.08 배운 내용 - 반복문 (에라토스테네스의 체)</a> </li>
+            <li> <a href="2407(20201008)_4.html" target="_blank">2020.10.08 배운 내용 - 반복문 (피타고라스의 정리)</a> </li>
         
         </ul>
     </body>
