--- a/2407(20201019)_2.html
+++ b/2407(20201019)_2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Canvas API 사용(2D)</title>
+        <title>Canvas API 사용(사각형)</title>
         <script>
             function draw()
             {
