--- a/2407(20201026)_1.html
+++ b/2407(20201026)_1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Canvas API 사용(문제해결)</title>
+        <title>Canvas API 사용(arc())</title>
         <script>
             function draw()
             {
